# installer

./: .gitignore  Cargo.toml  README.md  build.rs  patchnotes.txt
src/: app.rs  install.rs
src/ui/: done.rs  patchnotes.rs  welcome.rs
