[package]
name = "installer"
version = "0.4.1"
edition = "2024"

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
] }
egui = "0.35"
winreg = "0.56"
rfd = "0.17"
anyhow = "1"
ureq = "3.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
